refactor more: ICjFooChunk interfaces for new ICjStream